force-app/main/default/objects/SendInvoiceEmail__c/SendInvoiceEmail__c.object-meta.xml
<CustomObject>
    <description>Invoices to be generated as PDF and sent as email</description>
    <label>Send Invoice Email</label>
    <nameField>
        <displayFormat>InvoiceEmail-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send Invoice Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>