force-app/main/default/objects/SendInvoiceEmail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Send Invoice Emails</relationshipLabel>
    <relationshipName>InvoiceEmails</relationshipName>
    <type>Lookup</type>
</CustomField>