force-app/main/default/objects/SendInvoiceEmail__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice_Header__c</referenceTo>
    <relationshipLabel>Send Invoice Emails</relationshipLabel>
    <relationshipName>InvoiceEmails</relationshipName>
    <type>Lookup</type>
</CustomField>