force-app/main/default/objects/SendInvoiceEmail__c/fields/IsScheduledForDeletion__c.field-meta.xml
<CustomField>
    <fullName>IsScheduledForDeletion__c</fullName>
    <formula>AND(DATEVALUE(CreatedDate) &lt; TODAY() - 30, ISPICKVAL(Status__c, &apos;Sent&apos;))</formula>
    <label>Sheduled For Deletion?</label>
    <type>Checkbox</type>
</CustomField>