force-app/main/default/objects/SendInvoiceEmail__c/listViews/Error.listView-meta.xml
<ListView>
    <fullName>Error</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error - Finance Contact,Error - No Lines,Error - More Lines</value>
    </filters>
    <label>Error</label>
</ListView>