force-app/main/default/objects/SendInvoiceEmail__c/listViews/ToProcess.listView-meta.xml
<ListView>
    <fullName>ToProcess</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Retry</value>
    </filters>
    <label>To Process</label>
</ListView>